enable tagid support on vpshere machine template spec

--- a/config/crd/bases/anywhere.eks.amazonaws.com_vspheremachineconfigs.yaml
+++ b/config/crd/bases/anywhere.eks.amazonaws.com_vspheremachineconfigs.yaml
@@ -53,6 +53,10 @@ spec:
                 type: string
               storagePolicyName:
                 type: string
+              tagIDs:
+                items:
+                  type: string
+                type: array
               template:
                 type: string
               users:
