--- a/.golangci.yml
+++ b/.golangci.yml
@@ -6,6 +6,7 @@ run:
     - ".*/mocks"
     - "manager/tilt_modules"
     - "internal/aws-sdk-go-v2"
+    - "pkg/providers/snow/api/v1beta1"
 linters:
   enable:
     - gofumpt
