Add validations, unit tests, and clean up for upgrade rollout strategy knobs

--- a/config/manifest/eksa-components.yaml
+++ b/config/manifest/eksa-components.yaml
@@ -3649,6 +3649,23 @@ spec:
                       - key
                       type: object
                     type: array
+                  upgradeRolloutStrategy:
+                    description: UpgradeRolloutStrategy determines the rollout strategy
+                      to use for rolling upgrades and related parameters/knobs
+                    properties:
+                      rollingUpdate:
+                        properties:
+                          maxSurge:
+                            type: integer
+                          maxUnavailable:
+                            type: integer
+                        required:
+                        - maxSurge
+                        - maxUnavailable
+                        type: object
+                      type:
+                        type: string
+                    type: object
                 type: object
               datacenterRef:
                 properties:
@@ -3807,6 +3824,23 @@ spec:
                         - key
                         type: object
                       type: array
+                    upgradeRolloutStrategy:
+                      description: UpgradeRolloutStrategy determines the rollout strategy
+                        to use for rolling upgrades and related parameters/knobs
+                      properties:
+                        rollingUpdate:
+                          properties:
+                            maxSurge:
+                              type: integer
+                            maxUnavailable:
+                              type: integer
+                          required:
+                          - maxSurge
+                          - maxUnavailable
+                          type: object
+                        type:
+                          type: string
+                      type: object
                   type: object
                 type: array
             type: object
@@ -4889,18 +4923,6 @@ spec:
                   kind:
                     type: string
                   name:
-                    type: string
-                type: object
-              upgradeRolloutStrategy:
-                properties:
-                  rollingUpdateParams:
-                    properties:
-                      maxSurge:
-                        type: integer
-                      maxUnavailable:
-                        type: integer
-                    type: object
-                  type:
                     type: string
                 type: object
               users:
