--- a/pkg/providers/tinkerbell/testdata/cluster_tinkerbell_external_etcd.yaml
+++ b/pkg/providers/tinkerbell/testdata/cluster_tinkerbell_external_etcd.yaml
@@ -13,6 +13,11 @@ spec:
       cidrBlocks:
         - 10.96.0.0/12
   controlPlaneConfiguration:
+    upgradeRolloutStrategy:
+      type: "RollingUpdate"
+      rollingUpdate:
+        maxSurge: 1
+        maxUnavailable: 0
     count: 1
     endpoint:
       host: 1.2.3.4
@@ -35,6 +40,11 @@ spec:
       machineGroupRef:
         name: test-md
         kind: TinkerbellMachineConfig
+      upgradeRolloutStrategy:
+        type: "RollingUpdate"
+        rollingUpdate:
+          maxSurge: 1
+          maxUnavailable: 0
 
 ---
 apiVersion: anywhere.eks.amazonaws.com/v1alpha1
