--- a/pkg/providers/tinkerbell/config/template-md.yaml
+++ b/pkg/providers/tinkerbell/config/template-md.yaml
@@ -33,10 +33,12 @@ spec:
         kind: TinkerbellMachineTemplate
         name: {{.workloadTemplateName}}
       version: {{.kubernetesVersion}}
-  upgradeRolloutStrategy:
+{{- if .upgradeRolloutStrategy }}
+  strategy:
     rollingUpdate:
       maxSurge: {{.maxSurge}}
       maxUnavailable: {{.maxUnavailable}}
+{{- end }}
 ---
 apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
 kind: TinkerbellMachineTemplate
