--- a/pkg/providers/tinkerbell/testdata/cluster_tinkerbell_minimal_registry_mirror.yaml
+++ b/pkg/providers/tinkerbell/testdata/cluster_tinkerbell_minimal_registry_mirror.yaml
@@ -14,6 +14,11 @@ spec:
       - 10.96.0.0/12
   controlPlaneConfiguration:
     count: 1
+    upgradeRolloutStrategy:
+      type: "RollingUpdate"
+      rollingUpdate:
+        maxSurge: 1
+        maxUnavailable: 0
     endpoint:
       host: 1.2.3.4
     machineGroupRef:
@@ -30,6 +35,11 @@ spec:
     machineGroupRef:
       name: test-md
       kind: TinkerbellMachineConfig
+    upgradeRolloutStrategy:
+      type: "RollingUpdate"
+      rollingUpdate:
+        maxSurge: 1
+        maxUnavailable: 0
   registryMirrorConfiguration:
     endpoint: 1.2.3.4
     port: 1234
