--- a/pkg/providers/tinkerbell/config/template-cp.yaml
+++ b/pkg/providers/tinkerbell/config/template-cp.yaml
@@ -261,6 +261,11 @@ spec:
             [plugins."io.containerd.grpc.v1.cri".registry.configs."{{.registryMirrorConfiguration}}".tls]
               ca_file = "/etc/containerd/certs.d/{{.registryMirrorConfiguration}}/ca.crt"
             {{- end }}
+            {{- if .registryAuth }}
+            [plugins."io.containerd.grpc.v1.cri".registry.configs."{{.registryMirrorConfiguration}}".auth]
+              username = "{{.registryUsername}}"
+              password = "{{.registryPassword}}"
+            {{- end }}
         owner: root:root
         path: "/etc/containerd/config_append.toml"
 {{- end }}
