--- a/config/crd/bases/anywhere.eks.amazonaws.com_vspheremachineconfigs.yaml
+++ b/config/crd/bases/anywhere.eks.amazonaws.com_vspheremachineconfigs.yaml
@@ -53,7 +53,7 @@ spec:
                 type: string
               storagePolicyName:
                 type: string
-              tagIDs:
+              tags:
                 items:
                   type: string
                 type: array
