Expose maxSurge and maxUnavailable knobs for rolling update strategy (#3747)
* Add knobs to control rolling upgrade parameters of maxSurge and maxUnavailable

* Add validations, unit tests, and clean up for upgrade rollout strategy knobs

--- a/pkg/providers/tinkerbell/config/template-cp.yaml
+++ b/pkg/providers/tinkerbell/config/template-cp.yaml
@@ -283,6 +283,11 @@ spec:
       kind: TinkerbellMachineTemplate
       name: {{.controlPlaneTemplateName}}
   replicas: {{.controlPlaneReplicas}}
+{{- if .upgradeRolloutStrategy }}
+  rolloutStrategy:
+    rollingUpdate:
+      maxSurge: {{.maxSurge}} 
+{{- end }}
   version: {{.kubernetesVersion}}
 ---
 {{- if .externalEtcd }}
