--- a/pkg/providers/cloudstack/testdata/cluster_main.yaml
+++ b/pkg/providers/cloudstack/testdata/cluster_main.yaml
@@ -74,8 +74,8 @@ spec:
     label: "data_disk"
   symlinks:
     /var/log/kubernetes: /data-small/var/log/kubernetes
-  affinityGroupIds:
-  - control-plane-anti-affinity
+  affinity:
+  - pro
 ---
 apiVersion: anywhere.eks.amazonaws.com/v1alpha1
 kind: CloudStackMachineConfig
@@ -100,8 +100,8 @@ spec:
   symlinks:
     /var/log/pods: /data-small/var/log/pods
     /var/log/containers: /data-small/var/log/containers
-  affinityGroupIds:
-  - worker-affinity
+  affinity:
+  - anti
   userCustomDetails:
     foo: bar
 ---
@@ -125,9 +125,5 @@ spec:
     device: "/dev/vdb"
     filesystem: "ext4"
     label: "data_disk"
-  symlinks:
-    /var/lib/: /data-small/var/lib
-  affinityGroupIds:
-  - etcd-affinity
 
 ---
