--- a/codecov.yml
+++ b/codecov.yml
@@ -11,6 +11,7 @@ coverage:
 
 ignore:
   - internal/test/e2e
+  - internal/pkg/api
   - internal/test/envtest
   - "**/zz_generated.deepcopy.go"
   - "test/framework" 
