--- a/pkg/providers/cloudstack/testdata/expected_results_minimal_md.yaml
+++ b/pkg/providers/cloudstack/testdata/expected_results_minimal_md.yaml
@@ -58,18 +58,31 @@ spec:
         kind: CloudStackMachineTemplate
         name: test-md-0-1234567890000
       version: v1.21.2-eks-1-21-4
+
 ---
 apiVersion: infrastructure.cluster.x-k8s.io/v1beta2
 kind: CloudStackMachineTemplate
 metadata:
+  creationTimestamp: null
   name: test-md-0-1234567890000
   namespace: eksa-system
 spec:
   template:
+    metadata:
+      creationTimestamp: null
     spec:
+      diskOffering:
+        customSizeInGB: 0
+        device: ""
+        filesystem: ""
+        label: ""
+        mountPath: ""
       offering:
         name: m4-large
+      sshKey: ""
       template:
         name: centos7-k8s-118
+
+---
 
 ---
