--- a/pkg/providers/vsphere/testdata/expected_results_main_121_md.yaml
+++ b/pkg/providers/vsphere/testdata/expected_results_main_121_md.yaml
@@ -14,6 +14,7 @@ spec:
             cloud-provider: external
             read-only-port: "0"
             anonymous-auth: "false"
+            cgroup-driver: systemd
             tls-cipher-suites: TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256
           name: '{{ ds.meta_data.hostname }}'
       preKubeadmCommands:
