--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -135,6 +135,8 @@ rules:
   resources:
   - awssnowclusters
   - awssnowmachinetemplates
+  - vsphereclusters
+  - vspheremachinetemplates
   verbs:
   - create
   - delete
