--- a/config/crd/bases/anywhere.eks.amazonaws.com_cloudstackdatacenterconfigs.yaml
+++ b/config/crd/bases/anywhere.eks.amazonaws.com_cloudstackdatacenterconfigs.yaml
@@ -20,7 +20,7 @@ spec:
     schema:
       openAPIV3Schema:
         description: CloudStackDatacenterConfig is the Schema for the cloudstackdatacenterconfigs
-          API
+          API.
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -36,7 +36,7 @@ spec:
             type: object
           spec:
             description: CloudStackDatacenterConfigSpec defines the desired state
-              of CloudStackDatacenterConfig
+              of CloudStackDatacenterConfig.
             properties:
               account:
                 description: 'Account typically represents a customer of the service
@@ -52,7 +52,7 @@ spec:
                   VMs across - corresponds to a list of CAPI failure domains
                 items:
                   description: CloudStackAvailabilityZone maps to a CAPI failure domain
-                    to distribute machines across Cloudstack infrastructure
+                    to distribute machines across Cloudstack infrastructure.
                   properties:
                     account:
                       description: Account typically represents a customer of the
@@ -150,7 +150,7 @@ spec:
                   description: CloudStackZone is an organizational construct typically
                     used to represent a single datacenter, and all its physical and
                     virtual resources exist inside that zone. It can either be specified
-                    as a UUID or name
+                    as a UUID or name.
                   properties:
                     id:
                       description: Zone is the name or UUID of the CloudStack zone
@@ -183,7 +183,7 @@ spec:
             type: object
           status:
             description: CloudStackDatacenterConfigStatus defines the observed state
-              of CloudStackDatacenterConfig
+              of CloudStackDatacenterConfig.
             properties:
               failureMessage:
                 description: FailureMessage indicates that there is a fatal problem
