--- a/config/crd/bases/anywhere.eks.amazonaws.com_nutanixdatacenterconfigs.yaml
+++ b/config/crd/bases/anywhere.eks.amazonaws.com_nutanixdatacenterconfigs.yaml
@@ -36,7 +36,7 @@ spec:
             type: object
           spec:
             description: NutanixDatacenterConfigSpec defines the desired state of
-              NutanixDatacenterConfig
+              NutanixDatacenterConfig.
             properties:
               additionalTrustBundle:
                 description: AdditionalTrustBundle is the optional PEM-encoded certificate
@@ -56,7 +56,7 @@ spec:
             type: object
           status:
             description: NutanixDatacenterConfigStatus defines the observed state
-              of NutanixDatacenterConfig
+              of NutanixDatacenterConfig.
             type: object
         type: object
     served: true
