--- a/config/crd/bases/anywhere.eks.amazonaws.com_snowdatacenterconfigs.yaml
+++ b/config/crd/bases/anywhere.eks.amazonaws.com_snowdatacenterconfigs.yaml
@@ -20,7 +20,7 @@ spec:
     schema:
       openAPIV3Schema:
         description: SnowDatacenterConfig is the Schema for the SnowDatacenterConfigs
-          API
+          API.
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -35,7 +35,7 @@ spec:
           metadata:
             type: object
           spec:
-            description: SnowDatacenterConfigSpec defines the desired state of SnowDatacenterConfig
+            description: SnowDatacenterConfigSpec defines the desired state of SnowDatacenterConfig.
             properties:
               identityRef:
                 description: IdentityRef is a reference to an identity for the Snow
@@ -49,7 +49,7 @@ spec:
             type: object
           status:
             description: SnowDatacenterConfigStatus defines the observed state of
-              SnowDatacenterConfig
+              SnowDatacenterConfig.
             type: object
         type: object
     served: true
