--- a/config/crd/bases/anywhere.eks.amazonaws.com_tinkerbellmachineconfigs.yaml
+++ b/config/crd/bases/anywhere.eks.amazonaws.com_tinkerbellmachineconfigs.yaml
@@ -20,7 +20,7 @@ spec:
     schema:
       openAPIV3Schema:
         description: TinkerbellMachineConfig is the Schema for the tinkerbellmachineconfigs
-          API
+          API.
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -36,7 +36,7 @@ spec:
             type: object
           spec:
             description: TinkerbellMachineConfigSpec defines the desired state of
-              TinkerbellMachineConfig
+              TinkerbellMachineConfig.
             properties:
               hardwareSelector:
                 additionalProperties:
@@ -56,7 +56,7 @@ spec:
               users:
                 items:
                   description: UserConfiguration defines the configuration of the
-                    user to be added to the VM
+                    user to be added to the VM.
                   properties:
                     name:
                       type: string
@@ -75,7 +75,7 @@ spec:
             type: object
           status:
             description: TinkerbellMachineConfigStatus defines the observed state
-              of TinkerbellMachineConfig
+              of TinkerbellMachineConfig.
             type: object
         type: object
     served: true
