Adding support for dynamic rollout strategy in CloudStack provider

--- a/pkg/providers/cloudstack/config/template-cp.yaml
+++ b/pkg/providers/cloudstack/config/template-cp.yaml
@@ -351,6 +351,11 @@ spec:
       sudo: ALL=(ALL) NOPASSWD:ALL
     format: {{.format}}
   replicas: {{.controlPlaneReplicas}}
+  {{- if .upgradeRolloutStrategy }}
+  rolloutStrategy:
+    rollingUpdate:
+      maxSurge: {{.maxSurge}}
+  {{- end }}
   version: {{.kubernetesVersion}}
 {{- if .externalEtcd }}
 ---
