--- a/pkg/providers/cloudstack/config/template-md.yaml
+++ b/pkg/providers/cloudstack/config/template-md.yaml
@@ -141,3 +141,9 @@ spec:
         kind: CloudStackMachineTemplate
         name: {{.workloadTemplateName}}
       version: {{.kubernetesVersion}}
+{{- if .upgradeRolloutStrategy }}
+      strategy:
+        rollingUpdate:
+          maxSurge: {{.maxSurge}}
+          maxUnavailable: {{.maxUnavailable}}
+{{- end }}
