Add RBAC permissions for manager role

--- a/config/manifest/eksa-components.yaml
+++ b/config/manifest/eksa-components.yaml
@@ -5334,6 +5334,18 @@ metadata:
   name: eksa-manager-role
 rules:
 - apiGroups:
+  - addons.cluster.x-k8s.io
+  resources:
+  - clusterresourcesets
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
   - anywhere.eks.amazonaws.com
   resources:
   - awsiamconfigs
@@ -5433,6 +5445,18 @@ rules:
   - anywhere.eks.amazonaws.com
   resources:
   - snowmachineconfigs
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - cluster.x-k8s.io
+  resources:
+  - '*'
   verbs:
   - create
   - delete
