Update rbac for oidcconfigs and awsiamconfigs

--- a/config/manifest/eksa-components.yaml
+++ b/config/manifest/eksa-components.yaml
@@ -5349,6 +5349,18 @@ rules:
   - anywhere.eks.amazonaws.com
   resources:
   - awsiamconfigs
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - anywhere.eks.amazonaws.com
+  resources:
+  - awsiamconfigs
   - bundles
   - cloudstackdatacenterconfigs
   - cloudstackmachineconfigs
@@ -5426,8 +5438,12 @@ rules:
   resources:
   - oidcconfigs
   verbs:
+  - create
+  - delete
   - get
   - list
+  - patch
+  - update
   - watch
 - apiGroups:
   - anywhere.eks.amazonaws.com
