--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -22,6 +22,18 @@ rules:
   - anywhere.eks.amazonaws.com
   resources:
   - awsiamconfigs
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - anywhere.eks.amazonaws.com
+  resources:
+  - awsiamconfigs
   - bundles
   - cloudstackdatacenterconfigs
   - cloudstackmachineconfigs
@@ -99,8 +111,12 @@ rules:
   resources:
   - oidcconfigs
   verbs:
+  - create
+  - delete
   - get
   - list
+  - patch
+  - update
   - watch
 - apiGroups:
   - anywhere.eks.amazonaws.com
