Update rbac for docker objects

--- a/config/manifest/eksa-components.yaml
+++ b/config/manifest/eksa-components.yaml
@@ -5502,6 +5502,8 @@ rules:
   resources:
   - awssnowclusters
   - awssnowmachinetemplates
+  - dockerclusters
+  - dockermachinetemplates
   - vsphereclusters
   - vspheremachinetemplates
   verbs:
