--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -175,6 +175,8 @@ rules:
   resources:
   - awssnowclusters
   - awssnowmachinetemplates
+  - dockerclusters
+  - dockermachinetemplates
   - vsphereclusters
   - vspheremachinetemplates
   verbs:
