Improve controller manager logs
This now makes use of the tooling provided by upstream
controller-runtime and component-base/logs. As a consequence, the
manager now takes a standard set of flags to configure logging.

The default logging format is configured to json, it's the direction
upstream is going duwe to its tooling support. For tilt, using text
for now until we provide better tooling to analyze the logs.

Instead of injecting a logger in the reconciler on construction, we now
use contextual logging. The benefit here is controller-runtime will
inject a default set of values that uniquely identify the reconcile
request.

--- a/config/tilt/kustomization.yaml
+++ b/config/tilt/kustomization.yaml
@@ -6,3 +6,12 @@ resources:
 images:
 - name: controller
   newName: eks-a-controller-manager
+
+patches:
+- patch: |-
+    - op: add
+      path: /spec/template/spec/containers/0/args/-
+      value: --logging-format=text
+  target:
+    kind: Deployment
+    name: eksa-controller-manager
