Default to Reconcile mode for CRS

--- a/pkg/providers/vsphere/config/template-cp.yaml
+++ b/pkg/providers/vsphere/config/template-cp.yaml
@@ -426,6 +426,7 @@ metadata:
   name: {{.resourceSetName}}
   namespace: {{.eksaSystemNamespace}}
 spec:
+  strategy: Reconcile
   clusterSelector:
     matchLabels:
       cluster.x-k8s.io/cluster-name: {{.clusterName}}
