--- a/pkg/providers/vsphere/testdata/expected_results_main_cp_csi_driver_credentials.yaml
+++ b/pkg/providers/vsphere/testdata/expected_results_main_cp_csi_driver_credentials.yaml
@@ -370,9 +370,10 @@ kind: ClusterResourceSet
 metadata:
   labels:
     cluster.x-k8s.io/cluster-name: test
-  name: test-crs-0
+  name: test-cpi-csi
   namespace: eksa-system
 spec:
+  strategy: Reconcile
   clusterSelector:
     matchLabels:
       cluster.x-k8s.io/cluster-name: test
