--- a/pkg/providers/vsphere/testdata/cluster_bottlerocket_mirror_config.yaml
+++ b/pkg/providers/vsphere/testdata/cluster_bottlerocket_mirror_config.yaml
@@ -36,6 +36,9 @@ spec:
   registryMirrorConfiguration:
     endpoint: 1.2.3.4
     port: 1234
+    ociNamespaces:
+      - registry: "public.ecr.aws"
+        namespace: "eks-anywhere"
 ---
 apiVersion: anywhere.eks.amazonaws.com/v1alpha1
 kind: VSphereMachineConfig
