--- a/pkg/providers/cloudstack/testdata/expected_results_mirror_config_md.yaml
+++ b/pkg/providers/cloudstack/testdata/expected_results_mirror_config_md.yaml
@@ -20,7 +20,7 @@ spec:
       - content: |
           [plugins."io.containerd.grpc.v1.cri".registry.mirrors]
             [plugins."io.containerd.grpc.v1.cri".registry.mirrors."public.ecr.aws"]
-              endpoint = ["https://1.2.3.4"]
+              endpoint = ["https://1.2.3.4:443/v2/eks-anywhere"]
         owner: root:root
         path: "/etc/containerd/config_append.toml"
       preKubeadmCommands:
