--- a/pkg/providers/vsphere/testdata/expected_results_mirror_config_md.yaml
+++ b/pkg/providers/vsphere/testdata/expected_results_mirror_config_md.yaml
@@ -21,7 +21,7 @@ spec:
       - content: |
           [plugins."io.containerd.grpc.v1.cri".registry.mirrors]
             [plugins."io.containerd.grpc.v1.cri".registry.mirrors."public.ecr.aws"]
-              endpoint = ["https://1.2.3.4:1234"]
+              endpoint = ["https://1.2.3.4:1234/v2/eks-anywhere"]
         owner: root:root
         path: "/etc/containerd/config_append.toml"
       preKubeadmCommands:
