Fix Tilt hot reload
Binary was being copied to a path different than the entry point, so the
binary was being hot loaded and the process restarted, but it started
a new process pointing to the original binary.

--- a/manager/docker/linux/eks-anywhere-cluster-controller/Dockerfile
+++ b/manager/docker/linux/eks-anywhere-cluster-controller/Dockerfile
@@ -20,7 +20,7 @@ ARG DST_MANAGER_BINARY_DIR=/usr/local/bin
 USER 65532
 WORKDIR "/home/nonroot"
 
-ENV PATH="${DST_MANAGER_BINARY_DIR}/eks-a:${DST_EKS_A_TOOL_BINARY_DIR}:${PATH}"
+ENV PATH="${DST_MANAGER_BINARY_DIR}:${DST_EKS_A_TOOL_BINARY_DIR}:${PATH}"
 
 COPY $DEPENDENCY_BINARIES_PATH $DST_EKS_A_TOOL_BINARY_DIR
 COPY $DEPENDENCY_LICENSES_PATH $DST_EKS_A_TOOL_LICENSE_DIR
@@ -28,6 +28,6 @@ COPY $DEPENDENCY_LICENSES_PATH $DST_EKS_A_TOOL_LICENSE_DIR
 COPY $LICENSES_PATH /LICENSES
 COPY ATTRIBUTION.txt /ATTRIBUTION.txt
 
-COPY $MANAGER_BIN_PATH $DST_MANAGER_BINARY_DIR/eks-a/manager
+COPY $MANAGER_BIN_PATH $DST_MANAGER_BINARY_DIR/manager
 
 ENTRYPOINT ["manager"]
