Add bottlerocket-bootstrap-snow image to snow bundle

--- a/config/crd/bases/anywhere.eks.amazonaws.com_bundles.yaml
+++ b/config/crd/bases/anywhere.eks.amazonaws.com_bundles.yaml
@@ -19,7 +19,7 @@ spec:
   - name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: Bundles is the Schema for the bundles API
+        description: Bundles is the Schema for the bundles API.
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -34,7 +34,7 @@ spec:
           metadata:
             type: object
           spec:
-            description: BundlesSpec defines the desired state of Bundles
+            description: BundlesSpec defines the desired state of Bundles.
             properties:
               cliMaxVersion:
                 type: string
@@ -1776,6 +1776,35 @@ spec:
                       type: object
                     snow:
                       properties:
+                        bottlerocketBootstrapSnow:
+                          properties:
+                            arch:
+                              description: Architectures of the asset
+                              items:
+                                type: string
+                              type: array
+                            description:
+                              type: string
+                            imageDigest:
+                              description: The SHA256 digest of the image manifest
+                              type: string
+                            name:
+                              description: The asset name
+                              type: string
+                            os:
+                              description: Operating system of the asset
+                              enum:
+                              - linux
+                              - darwin
+                              - windows
+                              type: string
+                            osName:
+                              description: Name of the OS like ubuntu, bottlerocket
+                              type: string
+                            uri:
+                              description: The image repository, name, and tag
+                              type: string
+                          type: object
                         components:
                           properties:
                             uri:
@@ -1849,6 +1878,7 @@ spec:
                         version:
                           type: string
                       required:
+                      - bottlerocketBootstrapSnow
                       - components
                       - kubeVip
                       - manager
@@ -1965,7 +1995,7 @@ spec:
                         tinkerbellStack:
                           properties:
                             actions:
-                              description: Tinkerbell Template Actions
+                              description: Tinkerbell Template Actions.
                               properties:
                                 cexec:
                                   properties:
@@ -2220,7 +2250,7 @@ spec:
                                   type: string
                               type: object
                             hook:
-                              description: Tinkerbell hook OS
+                              description: Tinkerbell hook OS.
                               properties:
                                 bootkit:
                                   properties:
@@ -2891,7 +2921,7 @@ spec:
             - versionsBundles
             type: object
           status:
-            description: BundlesStatus defines the observed state of Bundles
+            description: BundlesStatus defines the observed state of Bundles.
             type: object
         type: object
     served: true
